--- a/erpnext/projects/doctype/project/project.json
+++ b/erpnext/projects/doctype/project/project.json
@@ -66,6 +66,7 @@
   "additional_details",
   "source",
   "lead",
+  "lead_user",
   "technical_lead",
   "redacted_name",
   "using_on_website",
@@ -655,6 +656,14 @@
    "fieldname": "impact_detail",
    "fieldtype": "Data",
    "label": "Impact Detail"
+  },
+  {
+   "fetch_from": "lead.user_id",
+   "fieldname": "lead_user",
+   "fieldtype": "Link",
+   "hidden": 1,
+   "label": "Lead User",
+   "options": "User"
   }
  ],
  "icon": "fa fa-puzzle-piece",
@@ -667,7 +676,7 @@
   }
  ],
  "max_attachments": 4,
- "modified": "2024-12-13 15:03:50.182033",
+ "modified": "2025-01-28 16:09:42.975644",
  "modified_by": "Administrator",
  "module": "Projects",
  "name": "Project",
